# ollama-zit-import

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  technical.md
.github/workflows/: ci.yml
docs/samples/: moody-1-sample.txt  zit-2-pixlora-sample.txt  zit-2-sample.txt
src/ollama_zit_import/: __init__.py  __main__.py  cli.py  derive.py  importer.py  key_mapping.py  lora.py  lora_importer.py  model_importer.py  planning.py  runtime_support.py
tests/: test_cli.py  test_importer.py  test_key_mapping.py  test_lora.py  test_model_importer.py  test_model_ref.py
